--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,16 @@
     package="example.kotlin.com.myapplication">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CAMERA" />
+
+    <uses-feature
+        android:name="android.hardware.camera.any"
+        android:required="true" />
+    <uses-feature
+        android:name="android.hardware.camera.autofocus"
+        android:required="false" />
 
     <application
         android:allowBackup="true"
@@ -20,9 +30,16 @@
         </activity>
         <activity android:name=".MainActivity" />
         <activity android:name=".NoteDetailsActivity" />
-        <activity android:name=".DashBoardActivity"></activity>
+        <activity android:name=".DashBoardActivity" />
+
         <service android:name=".StartService" />
         <service android:name=".LocalService" />
+
+        <activity android:name=".TakePictureActivity" />
+        <activity
+            android:name=".ProgrssBarActivity"
+            android:label="@string/title_activity_progrss_bar"
+            android:theme="@style/AppTheme"></activity>
     </application>
 
 </manifest>
